[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ABDUL KHALIQ", email = "thenewagedevelopers@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.2.11",
]

[project.scripts]
hello-agent = "hello_agent:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
